Added "always active" functionality

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,10 +8,18 @@
 <body style="text-align:center">
     <div class="main">
         <!-- DISPLAY THE EXTENSION LOGO -->
-        <img src="logo.jpg" width="200px"></img>
+        <img src="logo.jpg" width="225px"></img>
 
-        <!-- OPTIONS TO CHOOSE WHEN THE EXTENSION WILL RUN -->
-        <form>
+        <br>
+
+            <!-- WHETHER OR NOT TO ALWAYS RUN EXTENSION -->
+            <div id="option-checkbox" style="margin=5x">
+                <label class="use-time">Always Active</label>
+                <input id="always-active" type="checkbox">
+                <p>OR</p>
+            </div>
+
+            <!-- OPTIONS TO CHOOSE WHEN THE EXTENSION WILL RUN -->
             <div id="inputs" style="margin=5px">
                 <!-- START TIME -->
                 <label class="time">Start Time</label>
@@ -23,16 +31,16 @@
                 <input id="end-time" type="time">
                 <br>
             </div>
-            
+
+            <!-- SAVE SELECTED TIMES -->
             <div id="button" style="margin:5px">
-                <!-- SAVE SELECTED TIMES -->
                 <form>
                     <label class="time=button"></label>
                     <button type="submit" id="set-time">Save Time</button>
                     <script src="popup.js"></script>
                 </form>
             </div>
-        </form>
+
     </div>
 </body>
 
