Added "on/off" functionality, new logos

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="popup_styles.css">
 </head>
 
 <body style="text-align:center">
     <div class="main">
         <!-- DISPLAY THE EXTENSION LOGO -->
-        <img src="logo.jpg" width="225px"></img>
+        <button id="toggle-on" style="background:transparent"></button>
 
         <br>
         <br>
